<resources>
    <string name="app_name">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="author">no style</string>
    <string name="string_help_text">当前应用缺少必要权限。\n请点击设置-权限-打开所需权限。</string>
    <string name="need_select_style">you need select a style file.</string>
    <string name="quit">Quit</string>
    <string name="quit_tip">Quit app?</string>
    <string name="unknown">unknown</string>
    <string name="select_style">Style List</string>
    <string name="menu_settings">Settings menu</string>
    <string name="preview">Preview Image</string>
    <string name="share_image">Share image</string>
    <string name="share">Share Image</string>
    <string name="clear_tip">Clear card info？</string>
    <string name="no_share_app">no find share app</string>
    <string name="load_style_list">find all styles</string>
    <string name="action_refresh">Refresh Image</string>
    <string name="action_zoom_in">Zoon In</string>
    <string name="action_zoom_out">Zoon Out</string>
    <string name="back_tip">Press back key again to exit.</string>
    <string name="reset_info">Reset info</string>
    <string name="open_set">Open set</string>
    <string name="save_set">Save set</string>
    <string name="save_as">Save as</string>
    <string name="copy_style">copy styles</string>
    <string name="copy_style_wait">coping styles</string>
    <string name="load_style">load style</string>
    <string name="load_style_wait">loading style</string>
    <string name="load_style_error">load style fail</string>
    <string name="about">About</string>
    <string name="save_image">Save Image</string>
    <string name="image_is_null">The size of image is too big.</string>
    <string name="file_dont_exist">File don\'t exist!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_image">Image PreView</string>
    <string name="title_activity_style_list">Style List</string>
    <string name="no_find_image_selector">no find image selector</string>
    <string name="no_find_image_cutor">no find image cutor</string>
    <string name="create_folder">New folder</string>
    <string name="apply">Apply</string>
    <string name="dialog_title">Info</string>
        <string name="about_info" formatted="false">\n
Name:\t\t%s\n
Version:\t%s\n
Author:\t247321453\n
E-mail:\t\t247321453@qq.com\n
</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
