<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_photo"
            android:title="@string/save_image"/>
        <item
            android:id="@+id/nav_reset"
            android:icon="@drawable/ic_refresh"
            android:title="@string/reset_info"/>
        <item
            android:id="@+id/nav_load_set"
            android:icon="@drawable/ic_open"
            android:title="@string/open_set"/>
        <item
            android:id="@+id/nav_save_set"
            android:icon="@drawable/ic_menu_save"
            android:title="@string/save_set"
            />
    </group>

    <item android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/select_style"/>

            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
